Customize portfolio with personal information and photo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <title>Shehab Shalan</title>
+    <title>John Yuan</title>
   </head>
   <body>
     <div id="root"></div>
